Implement app auth (like users by sign). Add API reference.

--- a/devpage.html
+++ b/devpage.html
@@ -7,7 +7,7 @@
 
             var output = document.getElementById("output");
             var input = document.getElementById("input");
-            var uuid = document.getElementById("uuid");
+            var aid = document.getElementById("aid");
             var uid_input = document.getElementById("uid");
             var ws;
             var apiSignURL = "{{.ApiSignURL}}";
@@ -61,8 +61,8 @@
                 if (!ws) {
                     return false;
                 }
-                print("SEND: " + uuid.value + " / " + input.value);
-                var message = '{"Action": "sendData", "To":"' + uuid.value + '", "Data":{"Text": "' + input.value + '"}}';
+                print("SEND: " + aid.value + " / " + input.value);
+                var message = '{"Action": "sendData", "To":"' + aid.value + '", "Data":{"Text": "' + input.value + '"}}';
                 ws.send(message);
                 return false;
             };
@@ -71,7 +71,7 @@
                 if (!ws) {
                     return false;
                 }
-                var message = '{"Action": "getConnected", "List":["' + uuid.value + '"]}';
+                var message = '{"Action": "getConnected", "List":["' + aid.value + '"]}';
                 ws.send(message);
                 return false;
             };
@@ -92,7 +92,7 @@
         <label for="uid">UID:</label><input id="uid" type="text" value="">
         <button id="open">Open</button> |
         <button id="close">Close</button> |
-        <label for="uuid">UUID</label><input id="uuid" type="text" value="123e4567-e89b-12d3-a456-426655440000">
+        <label for="aid">UUID</label><input id="aid" type="text" value="123e4567-e89b-12d3-a456-426655440000">
         <label for="input">Message</label><input id="input" type="text" value="Hello world!">
         <button id="send">Send</button>
         <button id="get_connected">Get connected</button>
