--- a/devpage.html
+++ b/devpage.html
@@ -7,10 +7,10 @@
 
             var output = document.getElementById("output");
             var input = document.getElementById("input");
-            var aid = document.getElementById("aid");
+            var aid_input = document.getElementById("aid");
             var uid_input = document.getElementById("uid");
             var ws;
-            var apiSignURL = "{{.ApiSignURL}}";
+            var apiURL = "{{.ApiURL}}";
             var apiKey = "{{.ApiKey}}";
 
             var print = function(message) {
@@ -39,21 +39,29 @@
                 };
             }
 
-            document.getElementById("open").onclick = function(evt) {
-                var uid = uid_input.value;
+            function api_call(method, query, onsuccess, onerror) {
                 var request = new XMLHttpRequest();
                 request.onreadystatechange = function() {
                     if(request.readyState === 4) {
                         if(request.status === 200) {
-                            open_ws(request.responseText);
+                            onsuccess(request);
                         } else {
-                            print("ERROR: An error occurred during your request: " +  request.status + " " + request.statusText);
+                            onerror(request);
                         }
                     }
                 };
-                request.open('Get', apiSignURL + '?uid=' + encodeURIComponent(uid));
+                request.open('Get', apiURL + '/' + method + '?' + query);
                 request.setRequestHeader('Auth', apiKey);
                 request.send();
+            }
+
+            document.getElementById("open").onclick = function(evt) {
+                var uid = uid_input.value;
+                api_call('user/sign-auth', 'uid=' + encodeURIComponent(uid), function(request) {
+                    open_ws(request.responseText);
+                }, function (request) {
+                    print("ERROR: An error occurred during your request: " +  request.status + " " + request.statusText);
+                });
                 return false;
             };
 
@@ -61,9 +69,16 @@
                 if (!ws) {
                     return false;
                 }
-                print("SEND: " + aid.value + " / " + input.value);
-                var message = '{"Action": "sendData", "To":"' + aid.value + '", "Data":{"Text": "' + input.value + '"}}';
-                ws.send(message);
+
+                var uid = uid_input.value;
+                var aid = aid_input.value;
+                api_call('app/attach', 'uid=' + encodeURIComponent(uid) + '&aid=' + encodeURIComponent(aid), function(request) {
+                    print("SEND: " + aid + " / " + input.value);
+                    var message = '{"Action": "sendData", "To":"' + aid + '", "Data":{"Text": "' + input.value + '"}}';
+                    ws.send(message);
+                }, function (request) {
+                    print("ERROR: An error occurred during your request: " +  request.status + " " + request.statusText);
+                });
                 return false;
             };
 
@@ -71,7 +86,7 @@
                 if (!ws) {
                     return false;
                 }
-                var message = '{"Action": "getConnected", "List":["' + aid.value + '"]}';
+                var message = '{"Action": "getConnected", "List":["' + aid_input.value + '"]}';
                 ws.send(message);
                 return false;
             };
